--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="https://www.instagram.com/_naman_joshi_1/">INSTAGRAM</a>
                 <a href="https://twitter.com/mr_handsome_11">TWITTER</a>
-                <a href="">DISCORD</a>
+                <a href="https://discord.gg/AP9XUspThQ">DISCORD</a>
             </div>
         </div>
     </section>
