--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/PFP.jpeg" alt="">
                 
                 </div>
                 <div class="column right">
